cmake_minimum_required(VERSION 3.7)
project("ccpp" LANGUAGES "Fortran")
add_compile_options(-fdefault-real-8 -fdefault-double-8 -ffree-line-length-512 -fno-range-check -cpp)
include_directories("/usr/include")
add_definitions(-DNEMS_GSM -Duse_netCDF -DINTERNAL_FILE_NML -DCCPP)
file(GLOB CCPP_SRC CONFIGURE_DEPENDS "ccpp-physics/physics/*.F", "ccpp-physics/physics/*.f" "ccpp-physics/physics/*.F90" "ccpp-physics/physics/*.f90")
list(FILTER CCPP_SRC EXCLUDE REGEX ".*GFS.*\\.F90")
list(FILTER CCPP_SRC EXCLUDE REGEX ".*gfs.*\\.F")
list(FILTER CCPP_SRC EXCLUDE REGEX ".*rrtmgp.*\\.F90")
add_library(ccpp ${CCPP_SRC})